WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
226966
[AppleWin] Fix build failure
https://bugs.webkit.org/show_bug.cgi?id=226966
Summary
[AppleWin] Fix build failure
Per Arne Vollan
Reported
2021-06-14 05:14:22 PDT
The AppleWin build is failing due to the following warning: platform\cf\MediaAccessibilitySoftLink.h(67,1): warning C4273: 'MAAudibleMediaCopyPreferredCharacteristics': inconsistent dll linkage
Attachments
Patch
(1.84 KB, patch)
2021-06-14 05:19 PDT
,
Per Arne Vollan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Per Arne Vollan
Comment 1
2021-06-14 05:15:01 PDT
<
rdar://79228536
>
Per Arne Vollan
Comment 2
2021-06-14 05:19:07 PDT
Created
attachment 431312
[details]
Patch
Per Arne Vollan
Comment 3
2021-06-14 11:11:10 PDT
Comment on
attachment 431312
[details]
Patch Thanks for reviewing!
EWS
Comment 4
2021-06-14 11:20:15 PDT
Committed
r278838
(
238787@main
): <
https://commits.webkit.org/238787@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 431312
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug