Cherry-pick r278838. rdar://problem/79228536

[AppleWin] Fix build failure
    https://bugs.webkit.org/show_bug.cgi?id=226966
    <rdar://79228536>

    Reviewed by Eric Carlson.

    Disable warning causing the build failure.

    * platform/cf/MediaAccessibilitySoftLink.h:

    Canonical link: https://commits.webkit.org/238787@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@278838 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/237696.38@safari-612.1.15.4-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-612.1.15.4-branch@279259 268f45cc-cd09-0410-ab3c-d52691b4dbfc